# AUDESYS

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md  bootstrap.sh  deny.toml  package-lock.json  package.json  pixi.bat  pixi.sh  pixi.toml  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/memorys/: conventions.md  decisions.md  pitfalls.md  status.md
.github/workflows/: qa-theia.yml  qa.yml
.opencode/: acp.jsonc  agent-guide.md  agent-model-tiers.md  init-mcp-lucide.mjs  init-mcp-shadcn.mjs  init-mcp-tailwind.mjs  oh-my-openagent.jsonc  opencode.json  pnpm-lock.yaml
.theia/: workspace.json
apps/runtime-panel/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/runtime-panel/src-tauri/: Cargo.toml  tauri.conf.json
apps/runtime-panel/src-tauri/icons/: icon.icns
apps/runtime-panel/src-tauri/src/: controller.rs  lib.rs  main.rs
apps/studio/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
apps/studio-theia/: .gitignore  SECURITY.md  electron-builder.yml  gen-esbuild.node.mjs  package-lock.json  package.json  package.json.bak  playwright.config.ts  postbuild.sh  token-patch.py  tsconfig.json
apps/studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/src/: lib.rs  main.rs  project.rs
archive/tauri-e2e/: studio-responsive-ui.spec.ts
crates/amw_inproc/: Cargo.toml
crates/audesys-amw-inproc/: Cargo.toml
crates/audesys-amw-zenoh/: Cargo.toml
crates/audesys-cnc-axis-group/: Cargo.toml
crates/audesys-cnc-axis-group/src/: alarm.rs  backlash.rs  config.rs  homing.rs  lib.rs  limits.rs
crates/audesys-cnc-motion/: Cargo.toml
crates/audesys-cnc-motion/src/: lib.rs  profile.rs
crates/audesys-controller/: Cargo.toml
crates/audesys-controller-client/: Cargo.toml
crates/audesys-controller-client/src/: lib.rs
crates/audesys-controller-client/tests/: studio_controller_e2e.rs
crates/audesys-controller/benches/: perf_benchmarks.rs
crates/audesys-controller/src/: adapter_manager.rs  config.rs  engine.rs  health.rs  ipc.rs  lib.rs  lifecycle.rs  logging.rs  main.rs  metrics.rs  signals.rs  simulation.rs  virtual_hart.rs  virtual_modbus.rs
crates/audesys-controller/tests/: adapter_integration_test.rs  adapter_signal_test.rs  controller_lifecycle_test.rs  hal_program_test.rs  health_endpoint_test.rs  integration_e2e_test.rs  ipc_integration_test.rs  pipeline_test.rs
crates/audesys-controller/tests/common/: mod.rs
crates/audesys-dap-adapter/: Cargo.toml
crates/audesys-dap-adapter/src/: adapter.rs  main.rs  protocol.rs
crates/audesys-fbd-compiler/: Cargo.toml
crates/audesys-gcode-compiler/: Cargo.toml
crates/audesys-gcode-compiler/src/: compiler.rs  lib.rs  parser.rs  token.rs
crates/audesys-gcode-compiler/tests/: compile_test.rs  full_pipeline_test.rs
crates/audesys-hal-binding-gen/: Cargo.toml
crates/audesys-hal-binding-gen/src/: codegen.rs  lexer.rs  lib.rs  parser.rs
crates/audesys-hal-binding-gen/tests/: pipeline_test.rs
crates/audesys-hal-core/: Cargo.toml
crates/audesys-hal-core/src/: discovery.rs  encoding.rs  lib.rs  middleware.rs  mock_transport.rs  qos.rs  stream.rs  transport.rs  types.rs  value.rs
crates/audesys-hal-core/tests/: config_barrier_stubs.rs  health.rs  protocol_stubs.rs  qos_stubs.rs  type_system_stubs.rs
crates/audesys-hal-core/tests/test_helpers/: mod.rs
crates/audesys-hal-flatbuffers/: Cargo.toml  build.rs
crates/audesys-hal-ir/: Cargo.toml
crates/audesys-hal-ir/src/: executor.rs  instruction.rs  lib.rs  program.rs  types.rs  vm.rs
crates/audesys-hart/: Cargo.toml
crates/audesys-hart/src/: adapter.rs  client.rs  config.rs  error.rs  lib.rs  mapping.rs
crates/audesys-il-compiler/: Cargo.toml
crates/audesys-il-compiler/src/: codegen.rs  lexer.rs  lib.rs  parser.rs
crates/audesys-ld-compiler/: Cargo.toml
crates/audesys-ld-compiler/src/: codegen.rs  lexer.rs  lib.rs
crates/audesys-ld-layout/: Cargo.toml
crates/audesys-ld-layout/src/: lib.rs  rung_layout.rs  validation.rs  wire_routing.rs
crates/audesys-ld-semantics/: Cargo.toml
crates/audesys-ld-semantics/src/: lib.rs  test_vectors.rs  tests.rs
crates/audesys-modbus/: Cargo.toml
crates/audesys-modbus-sys/: Cargo.toml  build.rs
crates/audesys-modbus/src/: adapter.rs  client.rs  config.rs  error.rs  lib.rs  mapping.rs
crates/audesys-modbus/tests/: integration_test.rs
crates/audesys-runtime-common/: Cargo.toml
crates/audesys-sfc-compiler/: Cargo.toml
crates/audesys-supervisor/: Cargo.toml
crates/audesys-supervisor/src/: config.rs  lib.rs  main.rs  monitor.rs
crates/audesys-supervisor/tests/: basic_test.rs
crates/audesys-theia-bridge/: Cargo.toml  audesys-theia-bridge.darwin-x64.node  index.d.ts  index.js  package-lock.json  package.json  vitest.config.ts
crates/audesys-theia-bridge/__tests__/: compile-fbd.test.ts  compile-gcode.test.ts  compile-il.test.ts  compile-ld-roundtrip.test.ts  compile-ld.test.ts  compile-sfc.test.ts  compile-st.test.ts  controller-lifecycle.test.ts  debug-commands.test.ts  deploy-program.test.ts  health-query.test.ts  load-hal-config.test.ts  read-signal.test.ts  signal-snapshot.test.ts  sim-project.test.ts  simulation-debug-stubs.test.ts  stubs.test.ts  worker-thread-pool.test.ts  workflow-file-create.test.ts
crates/audesys-theia-bridge/src/: lib.rs
crates/audesys-theia-bridge/test-worker/: benchmark.js  cancel-test.js  worker-pool.js  worker.js
crates/hal-flatbuffers/: Cargo.toml
docs/: architecture.md  hal-detailed-design.md  opencode-reasoning-compression-fix.md
docs/guides/: dev-setup-theia.md  migration-tauri-to-theia.md
docs/plans/: p0-milestone-roadmap.md  p0-mvp-acceptance.md  p0-mvp-status.md  p0-phase0-bootstrap.md  p0-sdd-tdd-ludwig.md  p1-execution-refinement.md  p1-testing-optimization.md  p1-unified-plan.md  phase4-benchmarks.md  (+6 more)
scripts/: _common.sh  archive-source.sh  pixi-init.bat  pixi-init.sh  pixi-shell.bat  pixi-shell.sh  qa-deep.sh  qa-fast.sh  qa-full.sh  tauri-to-theia-migrate.js
(+988 files in other folders)
