[workspace]
resolver = "3"
members = [
  "crates/audesys-hal-core",
  "crates/audesys-runtime-common",
  "crates/audesys-amw-inproc",
  "crates/audesys-hal-flatbuffers",
  "crates/audesys-hal-ir",
  "crates/audesys-modbus-sys",
  "crates/audesys-modbus",
  "crates/audesys-hart",
  "crates/audesys-controller",
  "crates/audesys-supervisor",
  "crates/audesys-controller-client",
  "crates/audesys-hal-binding-gen",
]
exclude = ["apps/studio/src-tauri"]
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/AUDESYS/AUDESYS"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unused_crate_dependencies = "warn"
