[workspace]
resolver = "3"
members = [
  "crates/audesys-hal-core",
  "crates/audesys-runtime-common",
  "crates/audesys-amw-inproc",
  "crates/audesys-hal-flatbuffers",
  "crates/audesys-hal-ir",
  "crates/audesys-modbus-sys",
  "crates/audesys-modbus",
  "crates/audesys-hart",
  "crates/audesys-controller",
  "crates/audesys-supervisor",
  "crates/audesys-controller-client",
  "crates/audesys-hal-binding-gen",
  "crates/audesys-dap-adapter",
  "crates/audesys-il-compiler",
  "crates/audesys-ld-compiler",
  "crates/audesys-ld-layout",
  "crates/audesys-ld-semantics",
  "crates/audesys-sfc-compiler",
  "crates/audesys-gcode-compiler",
  "crates/audesys-cnc-motion",
  "crates/audesys-cnc-axis-group",
  "crates/audesys-amw-zenoh",
  "crates/audesys-theia-bridge",
]
exclude = ["apps/studio/src-tauri", "apps/runtime-panel/src-tauri"]
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/AUDESYS/AUDESYS"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unused_crate_dependencies = "warn"
