[package]
name = "audesys-cnc-motion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AUDESYS CNC motion planner — trapezoidal velocity profile generator"

[dependencies]
audesys-hal-core = { path = "../audesys-hal-core" }
audesys-hal-ir = { path = "../audesys-hal-ir" }
