[package]
name = "audesys-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AUDESYS Runtime Controller — hard real-time HAL execution engine"

[dependencies]
audesys-hal-core = { path = "../audesys-hal-core" }
audesys-amw-inproc = { path = "../audesys-amw-inproc" }
audesys-runtime-common = { path = "../audesys-runtime-common" }

[dev-dependencies]
