[package]
name = "audesys-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AUDESYS Runtime Controller — hard real-time HAL execution engine"

[dependencies]
audesys-hal-core = { path = "../audesys-hal-core" }
audesys-amw-inproc = { path = "../audesys-amw-inproc" }
audesys-runtime-common = { path = "../audesys-runtime-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
libc = "0.2"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
audesys-modbus = { path = "../audesys-modbus" }
audesys-hart = { path = "../audesys-hart" }
audesys-hal-ir = { path = "../audesys-hal-ir" }
bincode = "1"
[[bin]]
name = "audesys-controller"
path = "src/main.rs"
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
audesys-hal-binding-gen = { path = "../audesys-hal-binding-gen" }

[[bench]]
name = "perf_benchmarks"
harness = false
