[package]
name = "audesys-dap-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AUDESYS DAP (Debug Adapter Protocol) adapter — enables VS Code remote debugging"

[dependencies]
audesys-controller-client = { path = "../audesys-controller-client" }
audesys-runtime-common = { path = "../audesys-runtime-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
