[package]
name = "audesys-gcode-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AUDESYS G-code (ISO 6983 / RS274) compiler targeting HAL IR"

[dependencies]
audesys-hal-ir = { path = "../audesys-hal-ir" }
audesys-hal-core = { path = "../audesys-hal-core" }
