[package]
name = "audesys-hal-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AUDESYS HAL core trait definitions — L1 RT data plane"


[dev-dependencies]
mockall = { version = "0.13", default-features = false }
audesys-amw-inproc = { path = "../audesys-amw-inproc" }