[package]
name = "audesys-hart"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "HART protocol adapter for AUDESYS HAL — bridges HART device variables to HalTransport Signals"

[dependencies]
audesys-hal-core = { path = "../audesys-hal-core" }
hart-protocol = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serialport = "0.9"
thiserror = "2"

[dev-dependencies]
audesys-amw-inproc = { path = "../audesys-amw-inproc" }
heapless = "0.8"
