[package]
name = "audesys-ld-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AUDESYS IEC 61131-3 LD (Ladder Diagram) → IL text compiler"

[dev-dependencies]
audesys-il-compiler = { path = "../audesys-il-compiler" }
audesys-hal-ir = { path = "../audesys-hal-ir" }
