[package]
name = "audesys-ld-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AUDESYS LD (Ladder Diagram) automatic layout engine — rung positioning, wire routing, validation"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
