[package]
name = "audesys-ld-semantics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AUDESYS IEC 61131-3 LD power flow semantics — contact network evaluation, EN/ENO chains, coil latching"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
