[package]
name = "audesys-modbus"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Modbus RTU/TCP protocol adapter for AUDESYS HAL — bridges Modbus registers to HalTransport Signals"

[dependencies]
audesys-hal-core = { path = "../audesys-hal-core" }
audesys-modbus-sys = { path = "../audesys-modbus-sys" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
audesys-amw-inproc = { path = "../audesys-amw-inproc" }
