[package]
name = "audesys-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AUDESYS Runtime Supervisor — process orchestration and monitoring"

[dependencies]
audesys-runtime-common = { path = "../audesys-runtime-common" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
libc = "0.2"

