[package]
name = "audesys-studio"
version = "0.1.0"
edition = "2021"
description = "AUDESYS Studio IDE"
license = "Apache-2.0"

[lib]
name = "audesys_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
