[package]
name = "audesys-studio"
version = "0.1.0"
edition = "2021"
description = "AUDESYS Studio IDE"
license = "Apache-2.0"

[lib]
name = "audesys_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
audesys-hal-binding-gen = { path = "../../../crates/audesys-hal-binding-gen" }
audesys-hal-ir = { path = "../../../crates/audesys-hal-ir" }
audesys-controller-client = { path = "../../../crates/audesys-controller-client" }
audesys-runtime-common = { path = "../../../crates/audesys-runtime-common" }
audesys-il-compiler = { path = "../../../crates/audesys-il-compiler" }
audesys-ld-compiler = { path = "../../../crates/audesys-ld-compiler" }
audesys-controller = { path = "../../../crates/audesys-controller" }
audesys-hal-core = { path = "../../../crates/audesys-hal-core" }
